[gd_scene load_steps=4 format=3 uid="uid://dpmtbbduioxrq"]

[ext_resource type="Script" path="res://game_hud.gd" id="1_s7av8"]
[ext_resource type="FontFile" uid="uid://gxmbr3xcsrre" path="res://assets/Deadfall-Regular.ttf" id="2_akpgk"]
[ext_resource type="PackedScene" uid="uid://cfwut0cwovhpv" path="res://options.tscn" id="3_o855o"]

[node name="GameHud" type="CanvasLayer"]
script = ExtResource("1_s7av8")

[node name="Options" parent="." instance=ExtResource("3_o855o")]

[node name="GameOver" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ResetButton" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 196.0
offset_top = 338.0
offset_right = 389.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_akpgk")
theme_override_font_sizes/font_size = 50
text = "Reset"

[node name="BackToMenu" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 437.0
offset_top = 338.0
offset_right = 632.0
offset_bottom = 427.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_akpgk")
theme_override_font_sizes/font_size = 50
text = "Menu"

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 182.0
offset_top = 188.0
offset_right = 612.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_akpgk")
theme_override_font_sizes/font_size = 62
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsBtn" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 308.0
offset_top = 445.0
offset_right = 514.0
offset_bottom = 534.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_akpgk")
theme_override_font_sizes/font_size = 38
text = "Options"

[connection signal="pressed" from="GameOver/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="GameOver/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="GameOver/OptionsBtn" to="." method="_on_options_btn_pressed"]
